--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "deploy": "shopify app deploy"
   },
   "dependencies": {
-    "@shopify/app": "^3.6.2",
-    "@shopify/cli": "^3.6.2"
+    "@shopify/admin-ui-extensions-react": "^1.0.1",
+    "@shopify/app": "^3.7.1",
+    "@shopify/cli": "^3.7.1",
+    "react": "^17.0.2"
   },
   "author": "angelmondragon"
 }
