--- a/web/package.json
+++ b/web/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "debug": "node --inspect-brk index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js --ignore ./frontend",
-    "serve": "cross-env NODE_ENV=production node index.js"
+    "serve": "cross-env NODE_ENV=production node index.js "
   },
   "type": "module",
   "engines": {
     "node": ">=14.13.1"
   },
+  "main": "index.js",
   "dependencies": {
     "@shopify/shopify-api": "^5.0.0",
     "compression": "^1.7.4",
@@ -18,11 +19,15 @@
     "cross-env": "^7.0.3",
     "express": "^4.17.3",
     "firebase": "^9.9.2",
+    "firebase-admin": "^9.8.0",
+    "firebase-functions": "^3.14.1",
     "install": "^0.13.0",
     "npm": "^8.16.0",
+    "path": "^0.12.7",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
+    "firebase-functions-test": "^0.2.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
