--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
     "debug": "node --inspect-brk index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js --ignore ./frontend",
     "serve": "cross-env NODE_ENV=production node index.js ",
-    "start": "cross-env NODE_ENV=production node index.js "
+    "start": "npm run serve",
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "type": "module",
   "engines": {
