--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@shopify/admin-ui-extensions-react": "^1.0.1",
     "@shopify/app": "^3.7.1",
     "@shopify/cli": "^3.7.1",
+    "cookie-parser": "^1.4.6",
     "react": "^17.0.2"
   },
   "author": "angelmondragon"
