--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "info": "shopify app info",
     "scaffold": "shopify app scaffold",
     "deploy": "shopify app deploy",
-    "start": "shopify app build"
+    "start": "cd web && node index.js"
   },
   "dependencies": {
     "@shopify/admin-ui-extensions-react": "^1.0.1",
