--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
   },
   "type": "module",
   "engines": {
-    "node": ">=14.13.1"
+    "node": "16.17.0"
   },
   "main": "index.js",
   "dependencies": {
